
  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
    - Fixed empty reactor cells taking 0.5s to craft, and not 20s. Sucks to suck, huh?
    - Finally got rid of the plastic bar item that appears in the factoriopedia and item menus.

---------------------------------------------------------------------------------------------------
Version: 0.6.141
Date: 2025-01-11
  The boulder made of byproducts Update:

  Changes:
    - Changed chromic versions of ferrum and patina leeching to give off no ore and a slight amount of ore slag.
    - Changed boron and cadmium recipes to give off patina instead of ferrum.
    - Redoubled red science to take 2 iron and nickel plates.

  Fixes:
    - Fixed tellurium plates being unlocked at the start of the game.
    - Gave all forms of transportation a return inventory for spent fuel.
    - Fixed residual locales.

---------------------------------------------------------------------------------------------------
Version: 0.6.139
Date: 2025-01-09
  The watch, someone will complain this is OP now Update:

  Changes:
    - Changed worker robot speed technology to start at 20% instead of 15%, and scale faster.
    - Changed inators taking stainless steel pipes, to make them take normal pipes.
    - Changed kasethal to give out 3 plates instead of 2.

  Fixes:
    - Fixed random technologies still requiring production or utility science. I will beat them till they stop moving.
    - Fixed palladium frothing giving nickel ore instead of chunks.

---------------------------------------------------------------------------------------------------
Version: 0.6.137
Date: 2025-01-07
  The fuck your semantic versioning, i will never learn to count Update:

  Changes:
    - Changed coke to have 6MJ of fuel value, not 8MJ.
    - Changed bulk inserters recipe to become PM-inised.